# hackerrank-orchestrate-may26

./: .gitignore  README.md  pyproject.toml
code/: README.md  main.py
code/support_triage/: cli.py  constants.py  triage.py
data/: sample_tickets.csv  support_corpus.json
docs/: MASTER_PROMPT.md  PREVIEW.md  presentation.md  prompts.md
support_tickets/: output.csv  support_tickets.csv
support_triage/: cli.py  corpus.py  models.py  text.py  webapp.py
tests/: test_cli.py  test_corpus.py  test_master_prompt_cases.py  test_triage.py  test_webapp.py
ui/: app.js  index.html  preview-data.js  styles.css
